[package]
name = "rignore"
version = "1.0.3"
edition = "2021"
authors = ["Hakan Vardar"]
description = "Generate .gitignore files using gitignore.io api"
license = "MIT"
repository = "https://github.com/HakanVardarr/rignore"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.20"
dirs = "4.0.0"
reqwest = "0.11.11"
tokio = {version = "1.21.0", features=["full"]}

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
