[package]
name = "rignore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.13", features = ["json"]}
tokio = {version = "1", features = ["full"]}
dirs = "4.0.0"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
