[package]
name = "rignore"
version = "1.1.0"
edition = "2021"
authors = ["Hakan Vardar"]
description = "Generate .gitignore files using gitignore.io api"
license = "MIT"
repository = "https://github.com/HakanVardarr/rignore"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.13", features = ["json"]}
tokio = {version = "1", features = ["full"]}
dirs = "4.0.0"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
